--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -525,5 +525,6 @@
   "dn34:2.1.77": "Or alternatively, a monk has only recently gotten better from being sick,",
   "dn34:2.1.78": "and he thinks:",
   "dn34:2.1.79": "‘I have only recently gotten better from being sick.",
-  "dn34:2.1.80": "Because of this, my body is weak and unfit for work. Why don't I take a nap.’"
+  "dn34:2.1.80": "Because of this, my body is weak and unfit for work. Why don't I take a nap.’",
+  "dn34:2.1.81": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself."
 }
