--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -530,5 +530,6 @@
   "dn34:2.1.82": "This is the eighth bases of laziness.",
   "dn34:2.1.83": "These are the eight things that lead to backsliding.",
   "dn34:2.1.84": "What are the eight things that lead to accomplishment?",
-  "dn34:2.1.85": "The eight bases of exertion."
+  "dn34:2.1.85": "The eight bases of exertion.",
+  "dn34:2.1.86": "Here, there is work to be done by a monk, and he thinks:"
 }
