--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -538,5 +538,6 @@
   "dn34:2.1.90": "Or alternatively, a monk has completed some work,",
   "dn34:2.1.91": "and he thinks:",
   "dn34:2.1.92": "‘I have completed some work. When doing the work, I was unable to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
-  "dn34:2.1.93": "This is the second bases of exertion."
+  "dn34:2.1.93": "This is the second bases of exertion.",
+  "dn34:2.1.94": "Or alternatively, a monk has a trip to make,"
 }
