--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -545,5 +545,6 @@
   "dn34:2.1.97": "This is the third bases of exertion.",
   "dn34:2.1.98": "Or alternatively, a monk has completed a trip,",
   "dn34:2.1.99": "and he thinks:",
-  "dn34:2.1.100": "‘I have completed a trip. When taking the trip, I was unable to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ..."
+  "dn34:2.1.100": "‘I have completed a trip. When taking the trip, I was unable to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
+  "dn34:2.1.101": "This is the fourth bases of exertion."
 }
