--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -548,5 +548,6 @@
   "dn34:2.1.100": "‘I have completed a trip. When taking the trip, I was unable to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
   "dn34:2.1.101": "This is the fourth bases of exertion.",
   "dn34:2.1.102": "Or alternatively, a monk walking for alms in a town or village does not gain his fill of coarse or choice food,",
-  "dn34:2.1.103": "and he thinks:"
+  "dn34:2.1.103": "and he thinks:",
+  "dn34:2.1.104": "‘Walking for alms in the town or village, I did not get my fill of coarse or choice food. Because of this, my body is light and fit for work. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...’"
 }
