--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -552,5 +552,6 @@
   "dn34:2.1.104": "‘Walking for alms in the town or village, I did not get my fill of coarse or choice food. Because of this, my body is light and fit for work. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...’",
   "dn34:2.1.105": "This is the fifth bases of exertion.",
   "dn34:2.1.106": "Or alternatively, a monk walking for alms in a town or village does gain his fill of coarse or choice food,",
-  "dn34:2.1.107": "and he thinks:"
+  "dn34:2.1.107": "and he thinks:",
+  "dn34:2.1.108": "‘Walking for alms in the town or village, I got my fill of coarse or choice food."
 }
