--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -554,5 +554,6 @@
   "dn34:2.1.106": "Or alternatively, a monk walking for alms in a town or village does gain his fill of coarse or choice food,",
   "dn34:2.1.107": "and he thinks:",
   "dn34:2.1.108": "‘Walking for alms in the town or village, I got my fill of coarse or choice food.",
-  "dn34:2.1.109": "‘Because of this, my body is strong and fit for work. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...’"
+  "dn34:2.1.109": "‘Because of this, my body is strong and fit for work. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...’",
+  "dn34:2.1.110": "This is the sixth bases of exertion."
 }
