--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -560,5 +560,6 @@
   "dn34:2.1.112": "and he thinks:",
   "dn34:2.1.113": "‘I have some minor arisen ailment. It is possible that my ailment might get worse. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
   "dn34:2.1.114": "This is the seventh bases of exertion.",
-  "dn34:2.1.115": "Or alternatively, a monk has only recently gotten better from being sick,"
+  "dn34:2.1.115": "Or alternatively, a monk has only recently gotten better from being sick,",
+  "dn34:2.1.116": "and he thinks:"
 }
