--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -565,5 +565,6 @@
   "dn34:2.1.117": "‘I have only recently gotten better from being sick. It is possible that my ailment might return. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’",
   "dn34:2.1.118": "So he kindles energy for attaining the unattained, acquiring the unacquired, and for seeing for himself that which he has not seen for himself.’",
   "dn34:2.1.119": "This is the eighth bases of exertion.",
-  "dn34:2.1.120": "These are the eight things that lead to accomplishment."
+  "dn34:2.1.120": "These are the eight things that lead to accomplishment.",
+  "dn34:2.1.121": "What are the eight things that are hard to penetrate?"
 }
