--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -570,5 +570,6 @@
   "dn34:2.1.122": "The eight inopportune, inconvenient occasions for living the holy life.",
   "dn34:2.1.123": "Here, a Such-Attained One, a Worthy One, a Fully Enlightened Buddha has arisen in the world. And he teaches the Dhamma that leads to peace, that leads to Nibbāna, that goes to full enlightenment, that is declared by those Well Gone.",
   "dn34:2.1.124": "But this person is reborn in hell.",
-  "dn34:2.1.125": "This is the first inopportune, inconvenient occasion for living the holy life."
+  "dn34:2.1.125": "This is the first inopportune, inconvenient occasion for living the holy life.",
+  "dn34:2.1.126": "Or alternatively, a Such-Attained One, a Worthy One, a Fully Enlightened Buddha has arisen in the world. And he teaches the Dhamma that leads to peace, that leads to Nibbāna, that goes to full enlightenment, that is declared by those Well Gone."
 }
