--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -578,5 +578,6 @@
   "dn34:2.1.130": "he is reborn in the realm of hungry ghosts.",
   "dn34:2.1.131": "This is the third inopportune, inconvenient occasion for living the holy life.",
   "dn34:2.1.132": "Or alternatively ...",
-  "dn34:2.1.133": "he is reborn in the retinue of angels who live long lives."
+  "dn34:2.1.133": "he is reborn in the retinue of angels who live long lives.",
+  "dn34:2.1.134": "This is the fourth inopportune, inconvenient occasion for living the holy life."
 }
