--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -63,7 +63,7 @@
   "mn2:10.8": "nekyla dar nekilusi būties troškimo yda, o iškilusios būties troškimo ydos nusikratoma;",
   "mn2:10.9": "nekyla dar nekilusi nežinojimo yda, o iškilusios nežinojimo ydos nusikratoma;",
   "mn2:10.10": "Šie yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas.",
-  "mn2:10.11": "Dėl to, kad jis nekreipia dėmesio ten, kur dėmesys nekreiptinas ir kreipia dėmesį ten, kur dėmesys kreiptinas, jam nekyla dar nekilusios ydos, o iškilusių ydų nusikratoma.",
+  "mn2:10.11": "Dėl to, kad jis nekreipia dėmesio ten, kur dėmesys nekreiptinas ir kreipia dėmesį ten, kur dėmesys kreiptinas, jam nekyla dar nekilusios ydos, o iškilusių ydų atsikratoma.",
   "mn2:11.1": "Jis nuodugniai įsidėmi: „Tai yra kančia”,  nuodugniai įsidėmi: „Tai yra kančios šaltinis”, nuodugniai įsidėmi: „Tai yra kančios pabaiga”, nuodugniai įsidėmi: „Tai yra kelias į kančios pabaigą”.",
   "mn2:11.2": "Taip nuodugniai kreipiantis dėmesį  atsikrato trejų pančių:",
   "mn2:11.3": "tapatumo pažiūros, abejonių ir bet kokio prisirišimo prie ritualų ir apeigų.",
