--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -29,7 +29,7 @@
   "mn2:6.5": "šie yra dalykai, į kuriuos jis kreipia dėmesį, nors dėmesys ten yra nekreiptinas.",
   "mn2:6.6": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis nekreipia dėmesio, nors dėmesys ten yra kreiptinas?",
   "mn2:6.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o iškilusios geismo ydos nusikratoma;",
-  "mn2:6.8": "nekyla dar nekilusi būties troškimo yda, o iškilusios būties troškimo ydos nusikratoma;",
+  "mn2:6.8": "nekyla dar nekilusi būties troškimo yda, o iškilusios būties troškimo ydos atsikratoma;",
   "mn2:6.9": "nekyla dar nekilusi nežinojimo yda, o iškilusios nežinojimo ydos atsikratoma –",
   "mn2:6.10": "šie yra dalykai, į kuriuos jis nekreipia dėmesio, nors dėmesys ten yra kreiptinas.",
   "mn2:7.1": "Dėl to, kad jis kreipia dėmesį ten, kur dėmesys nekreiptinas ir nekreipia dėmesio ten, kur dėmesys kreiptinas, jam kyla dar nekilusios ydos, o iškilusios auga.",
