--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -22,5 +22,6 @@
   "mn7:4.1": "Vienuoliai, vienuolis supratęs, kad godulys ir neteisėtas godumas yra proto taršalas, atsikrato jo;",
   "mn7:4.2": "supratęs, kad piktavališkumas yra proto taršalas,",
   "mn7:4.3": "atsikrato jo;",
-  "mn7:4.4": "supratęs, kad pyktis yra proto teršalas,"
+  "mn7:4.4": "supratęs, kad pyktis yra proto teršalas,",
+  "mn7:4.5": "atsikrato jo;"
 }
