--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -24,5 +24,7 @@
   "mn7:4.3": "atsikrato jo;",
   "mn7:4.4": "supratęs, kad pyktis yra proto teršalas,",
   "mn7:4.5": "atsikrato jo;",
-  "mn7:4.6": "supratęs, kad pagieža yra proto teršalas,"
+  "mn7:4.6": "supratęs, kad pagieža yra proto teršalas,",
+  "mn7:4.7": "atsikrato jo;",
+  "mn7:4.8": "supratęs, kad panieka yra proto teršalas,"
 }
