--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -31,5 +31,7 @@
   "mn7:4.10": "supratęs, kad įžulumas yra proto teršalas,",
   "mn7:4.11": "atsikrato jo;",
   "mn7:4.12": "supratęs, kad pavydas yra proto teršalas,",
-  "mn7:4.13": "atsikrato jo;"
+  "mn7:4.13": "atsikrato jo;",
+  "mn7:4.14": "supratęs, kad savininkiškumas yra proto teršalas,",
+  "mn7:4.15": "atsikrato jo;"
 }
