--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -34,5 +34,7 @@
   "mn7:4.13": "atsikrato jo;",
   "mn7:4.14": "supratęs, kad savininkiškumas yra proto teršalas,",
   "mn7:4.15": "atsikrato jo;",
-  "mn7:4.16": "supratęs, kad apgaulingumas yra proto teršalas,"
+  "mn7:4.16": "supratęs, kad apgaulingumas yra proto teršalas,",
+  "mn7:4.17": "atsikrato jo;",
+  "mn7:4.18": "supratęs, kad veidmainystė yra proto teršalas,"
 }
