--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -47,5 +47,6 @@
   "mn7:4.26": "supratęs, kad puikybė yra proto teršalas,",
   "mn7:4.27": "atsikrato jo;",
   "mn7:4.28": "supratęs, kad akiplėšiškumas yra proto teršalas,",
-  "mn7:4.29": "atsikrato jo;"
+  "mn7:4.29": "atsikrato jo;",
+  "mn7:4.30": "supratęs, kad nerūpestingumas yra proto teršalas,"
 }
