--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -50,5 +50,6 @@
   "mn7:4.29": "atsikrato jo;",
   "mn7:4.30": "supratęs, kad nerūpestingumas yra proto teršalas,",
   "mn7:4.31": "atsikrato jo.",
-  "mn7:5.1": "Kada gi, vienuoliai, vienuolis supratęs, kad godulys ir neteisėtas godumas yra proto taršalas,"
+  "mn7:5.1": "Kada gi, vienuoliai, vienuolis supratęs, kad godulys ir neteisėtas godumas yra proto taršalas,",
+  "mn7:5.2": "atsikratė jo;"
 }
