--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -53,5 +53,6 @@
   "mn7:5.1": "Kada gi, vienuoliai, vienuolis supratęs, kad godulys ir neteisėtas godumas yra proto taršalas,",
   "mn7:5.2": "atsikratė to taršalo;",
   "mn7:5.3": "supratęs, kad piktavališkumas yra proto taršalas …",
-  "mn7:5.30": "supratęs, kad nerūpestingumas yra proto teršalas,"
+  "mn7:5.30": "supratęs, kad nerūpestingumas yra proto teršalas,",
+  "mn7:5.31": "atsikratė to taršalo."
 }
