--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -57,5 +57,6 @@
   "mn7:5.31": "atsikratė to taršalo,",
   "mn7:5.32": "jis turi (tokį) patirtimi grįstą pasitikėjimą Buda:",
   "mn7:5.33": "„Šis Palaimintasis yra arahantas, tobulai nušvitęs, įgijęs žinojimą ir gerą elgesį, gerai žengęs, žinantis pasaulį, neprilygstamas tramdytinų žmonių ugdytojas, dievybių ir žmonių mokytojas, nušvitęs, palaimintas.”",
-  "mn7:6.1": "Jis turi (tokį) patirtimi grįstą pasitikėjimą Mokymu:"
+  "mn7:6.1": "Jis turi (tokį) patirtimi grįstą pasitikėjimą Mokymu:",
+  "mn7:6.2": "„Gerai išdėstytas Palaimintuoju Mokymas, jis matomas čia ir dabar, nesensta, ragina įsitikinti [jo tikrumu], yra vertas taikymo, turi būti asmeniškai pažintas išmintingaisiais.”"
 }
