--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -24,7 +24,7 @@
   "an7.64:3.4": "Priešo nedžiugina priešo sėkmė.",
   "an7.64:3.5": "Apimtas pykčio, užvaldytas pykčio pikčiurna, vienuoliai, paėmęs kažką kenksmingą, mano, kad pasiėmė kažką naudingą, o paėmęs kažką naudingą, mano, kad pasiėmė kažką kenksmingą.",
   "an7.64:3.6": "Priešingų dalykų laikymas vienu kitu pykčio užvaldytajam ilgai neša žalą ir skausmą.",
-  "an7.64:3.7": "Tai, vienuoliai, yra trečias priešą pamaloninantis, priešui padedantis dalykas atsitinkantis pikčiurnai vyrui ar moteriai.",
+  "an7.64:3.7": "Tai, vienuoliai, yra trečias dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
   "an7.64:4.1": "Toliau, vienuoliai, priešas linki priešui:",
   "an7.64:4.2": "„Kad jis būtų nepasiturintis!”",
   "an7.64:4.3": "Kokia yra to priežastis?",
