--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -30,7 +30,7 @@
   "an7.64:4.3": "Kokia yra to priežastis?",
   "an7.64:4.4": "Priešo nedžiugina priešo turtingumas.",
   "an7.64:4.5": "Apimto pykčio, užvaldyto pykčio pikčiurnos, vienuoliai, turtus, kuriuos jis didžiulėmis pastangomis, savo rankomis, prakaitu teisėtai uždirbo, pasisavina valdžia.",
-  "an7.64:4.6": "Tai, vienuoliai, yra ketvirtas priešą pamaloninantis, priešui padedantis dalykas atsitinkantis pikčiurnai vyrui ar moteriai.",
+  "an7.64:4.6": "Tai, vienuoliai, yra ketvirtas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
   "an7.64:5.1": "Toliau, vienuoliai, priešas linki priešui:",
   "an7.64:5.2": "„Kad jis būtų nepopuliarus!”",
   "an7.64:5.3": "Kokia yra to priežastis?",
