--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -17,7 +17,7 @@
   "an7.64:2.4": "Priešo nedžiugina priešo saldus miegas.",
   "an7.64:2.5": "Apimtas pykčio, užvaldytas pykčio pikčiurna, vienuoliai, kad jis ir guli ant lovos išklotos dideliu juodu kilimu, gėlėmis išsiuvinėtu vilnoniu apklotu ir elnio kailio kilimu bei raudonomis pagalvėmis iš abiejų pusių,",
   "an7.64:2.6": "vis vien, būdamas užvaldytas pykčio jis miega blogai.",
-  "an7.64:2.7": "Tai, vienuoliai, yra antras dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
+  "an7.64:2.7": "Tai, vienuoliai, yra antras dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloniną ir padeda priešui.",
   "an7.64:3.1": "Toliau, vienuoliai, priešas linki priešui:",
   "an7.64:3.2": "„Kad jam nesisektų!” ",
   "an7.64:3.3": "Kokia yra to priežastis?",
