--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -42,7 +42,7 @@
   "an7.64:6.3": "Kokia yra to priežastis?",
   "an7.64:6.4": "Priešo nedžiugina, kai priešas turi draugų.",
   "an7.64:6.5": "Apimto pykčio, užvaldyto pykčio pikčiurnos, vienuoliai, draugai, bičiuliai, giminės ir artimieji iš tolo jo vengia.",
-  "an7.64:6.6": "Tai, vienuoliai, yra šeštas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
+  "an7.64:6.6": "Tai, vienuoliai, yra šeštas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloniną ir padeda priešui.",
   "an7.64:7.1": "Toliau, vienuoliai, priešas linki priešui:",
   "an7.64:7.2": "„Kad jis po kūno žūties, po mirties atgimtų pragaištingoje, blogoje vietoje, kančių pasaulyje, pragare!”",
   "an7.64:7.3": "Kokia yra to priežastis?",
