--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -10,7 +10,7 @@
   "an7.64:1.6": "Priešo nedžiugina priešo grožis.",
   "an7.64:1.7": "Apimtas pykčio, užvaldytas pykčio pikčiurna, vienuoliai, kad jis ir yra švariai nusiprausęs, gerai išsitrynęs (aliejais), susišukavęs ir baltais rūbais apsirengęs,",
   "an7.64:1.8": "vis vien, būdamas užvaldytas pykčio jis atrodo bjauriai.",
-  "an7.64:1.9": "Tai, vienuoliai, yra pirmas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
+  "an7.64:1.9": "Tai, vienuoliai, yra pirmas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloniną ir padeda priešui.",
   "an7.64:2.1": "Toliau, vienuoliai, priešas linki priešui:",
   "an7.64:2.2": "„Kad jis blogai miegotų!”",
   "an7.64:2.3": "Kokia yra to priežastis?",
