--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn56.40:1.2": "Da könnte ein Asket oder Brahmane, der auf ein Streitgespräch aus ist, der ein Streitgespräch sucht, von Osten, Westen, Norden oder Süden kommen: ",
   "sn56.40:1.3": "‚Ich will seine Lehre widerlegen!‘ Es ist einfach nicht möglich, diesen Mönch auf rechtmäßige Art zum Zittern, Schwanken oder Beben zu bringen. ",
   "sn56.40:2.1": "Wie eine sechzehn Fuß hohe Steinsäule, ",
-  "sn56.40:2.2": "bei der acht Fuß in der Erde steckten und acht Fuß darüber aufragten: "
+  "sn56.40:2.2": "bei der acht Fuß in der Erde steckten und acht Fuß darüber aufragten: ",
+  "sn56.40:2.3": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, könnten sie sie nicht zum Zittern, Schwanken oder Beben bringen. "
 }
