--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.40:2.1": "Wie eine sechzehn Fuß hohe Steinsäule, ",
   "sn56.40:2.2": "bei der acht Fuß in der Erde steckten und acht Fuß darüber aufragten: ",
   "sn56.40:2.3": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, könnten sie sie nicht zum Zittern, Schwanken oder Beben bringen. ",
-  "sn56.40:2.4": "Und warum nicht? "
+  "sn56.40:2.4": "Und warum nicht? ",
+  "sn56.40:2.5": "Weil diese Steinsäule tief eingebettet und fest verankert ist. "
 }
