--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.40_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn56.40:2.4": "Und warum nicht? ",
   "sn56.40:2.5": "Weil diese Steinsäule tief eingebettet und fest verankert ist. ",
   "sn56.40:2.6": "Ebenso ist es, wenn wir irgendeinen Mönch nehmen, der wahrhaftig versteht: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ ",
-  "sn56.40:2.7": "Da könnte ein Asket oder Brahmane, der auf ein Streitgespräch aus ist, der ein Streitgespräch sucht, von Osten, Westen, Norden oder Süden kommen: ‚Ich will seine Lehre widerlegen!‘ Es ist einfach nicht möglich, diesen Mönch auf rechtmäßige Art zum Zittern, Schwanken oder Beben zu bringen. "
+  "sn56.40:2.7": "Da könnte ein Asket oder Brahmane, der auf ein Streitgespräch aus ist, der ein Streitgespräch sucht, von Osten, Westen, Norden oder Süden kommen: ‚Ich will seine Lehre widerlegen!‘ Es ist einfach nicht möglich, diesen Mönch auf rechtmäßige Art zum Zittern, Schwanken oder Beben zu bringen. ",
+  "sn56.40:2.11": "Und warum nicht? "
 }
