--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn56.43:3.1": "„Aber Herr, welches ist das?“ ",
   "sn56.43:3.2": "„Mönche und Nonnen, es gibt Asketen und Brahmanen, die nicht wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.43:3.3": "Sie finden Vergnügen an Entscheidungen, die zu Wiedergeburt führen … ",
-  "sn56.43:3.4": "Sie treffen fortgesetzt solche Entscheidungen … "
+  "sn56.43:3.4": "Sie treffen fortgesetzt solche Entscheidungen … ",
+  "sn56.43:3.5": "Wenn sie solche Entscheidungen getroffen haben, brennen sie mit dem Fieber der Wiedergeburt, dem Fieber von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
 }
