--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn56.43:3.3": "Sie finden Vergnügen an Entscheidungen, die zu Wiedergeburt führen … ",
   "sn56.43:3.4": "Sie treffen fortgesetzt solche Entscheidungen … ",
   "sn56.43:3.5": "Wenn sie solche Entscheidungen getroffen haben, brennen sie mit dem Fieber der Wiedergeburt, dem Fieber von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
-  "sn56.43:3.6": "Sie sind nicht befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
+  "sn56.43:3.6": "Sie sind nicht befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
+  "sn56.43:3.7": "Sie sind nicht befreit vom Leiden, sage ich. "
 }
