--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn56.43:4.1": "Es gibt Asketen und Brahmanen, die wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.43:4.2": "Sie finden kein Vergnügen an Entscheidungen, die zu Wiedergeburt führen … ",
   "sn56.43:4.3": "Sie hören auf, solche Entscheidungen zu treffen … ",
-  "sn56.43:4.4": "Wenn sie aufgehört haben, solche Entscheidungen zu treffen, brennen sie nicht im Fieber der Wiedergeburt, im Fieber von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
+  "sn56.43:4.4": "Wenn sie aufgehört haben, solche Entscheidungen zu treffen, brennen sie nicht im Fieber der Wiedergeburt, im Fieber von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
+  "sn56.43:4.5": "Sie sind befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
 }
