--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn56.43:4.2": "Sie finden kein Vergnügen an Entscheidungen, die zu Wiedergeburt führen … ",
   "sn56.43:4.3": "Sie hören auf, solche Entscheidungen zu treffen … ",
   "sn56.43:4.4": "Wenn sie aufgehört haben, solche Entscheidungen zu treffen, brennen sie nicht im Fieber der Wiedergeburt, im Fieber von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
-  "sn56.43:4.5": "Sie sind befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
+  "sn56.43:4.5": "Sie sind befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
+  "sn56.43:4.6": "Sie sind nicht befreit vom Leiden, sage ich. "
 }
