--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1470,6 +1470,7 @@
   "pli-tv-kd2:36.4.42": "The whole sangha, unsure, ",
   "pli-tv-kd2:36.4.43": "They did not know, learned; ",
   "pli-tv-kd2:36.4.44": "Greater, equal, smaller, ",
+  "pli-tv-kd2:36.4.45": "And the gathering has not left. ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
