--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1479,6 +1479,7 @@
   "pli-tv-kd2:36.4.51": "The fourteenth, and the fifteenth again; ",
   "pli-tv-kd2:36.4.52": "The day after, the fifteenth, ",
   "pli-tv-kd2:36.4.53": "Characteristics, belonging to a Buddhist sect, both. ",
+  "pli-tv-kd2:36.4.54": "That has expired, non-observance day, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
